Adding in the beginning of tags and talk levels

--- a/source/themes/midwestphp/mwphp15-theme/_layouts/talk.html.twig
+++ b/source/themes/midwestphp/mwphp15-theme/_layouts/talk.html.twig
@@ -36,11 +36,12 @@
                 {% endif %}
                 <!-- .talk--image -->
             </header>
-
             <div class="talk-content entry-content">
                 {% block content_wrapper %}
                     {% block content %}{% endblock %}
                 {% endblock %}
+                <p>Level: {{ page.level }}</p>
+                <p>Tags: {{ page.tags }}</p>
             </div>
         </article>
     </main>
